Fixed blue flickering on Chrome for Android caused by cursor:pointer style

--- a/src/main/resources/web/public/components/blockplus/network/mobile.css
+++ b/src/main/resources/web/public/components/blockplus/network/mobile.css
@@ -6,34 +6,27 @@ body {
 
 canvas {
 	vertical-align: bottom;
-	cursor: pointer;
 }
 
 img {
 	vertical-align: bottom;
 	margin: 1px;
 	border-radius: 19px;
-
-	/*
-	border-top-right-radius: 16px;
-	border-bottom-right-radius: 39px;
-	border-top-left-radius: 39px;
-	border-bottom-left-radius: 16px;
-	*/
 }
 
 #content {
 	margin: 0 auto;
-	/*
-	background-color: #2a2d30;
-	*/
 	background-color: #373B3F;
 	overflow: hidden;
 	width: 320px;
 	height: 455px;
+	
 	/*
 	width: 392px;
 	height: 576px;
+	*/
+	
+	/*
 	margin-top: 50px;
 	border: 5px solid white;
 	border-radius: 10px;
@@ -113,7 +106,6 @@ img {
 	font-size: 125%;
 	text-align: center;
 	color: white;
-	cursor: pointer;
 	line-height: 33px;
 	height: 33px;
 }
